
package mysql;

message tb_player_role{
    required uint32 role_id = 1;
    required uint32 system_id = 2;
    required uint32 player_id = 3;
    required string role_name = 4;
    required uint32 status = 5;
    required uint32 sex = 6;
    required uint32 profession = 7;
    required uint64 experience = 8;
    required uint32 level = 9;
    required uint32 tael = 10;
    required uint32 ingot = 11;
    required uint32 gift_money = 12;
    required uint32 is_suspended_account = 13;
    required uint32 partner_id = 14;
    required uint32 family_id = 15;
    required uint32 family_position = 16;
    required uint32 can_be_raised = 17;
    required uint32 family_level = 18;
    required uint32 can_join_family = 19;
    required uint32 can_be_transmit = 20;
    required uint32 pk_model = 21;
    required uint32 pk_value = 22;
    required uint32 military_strategy = 23;
    required uint32 map_id = 24;
    required uint32 x_pos = 25;
    required uint32 y_pos = 26;
    required uint32 siege_reputation = 27;
    required uint32 cross_svr_war_reputation = 28;
    required uint32 max_hp = 29;
    required uint32 cur_hp = 30;
    required uint32 absorb_hp = 31;
    required uint32 max_mp = 32;
    required uint32 cur_mp = 33;
    required uint32 absorb_mp = 34;
    required uint32 attack_min = 35;
    required uint32 attack_max = 36;
    required uint32 defense_min = 37;
    required uint32 defense_max = 38;
    required uint32 hit_point = 39;
    required uint32 dodge = 40;
    required uint32 stability = 41;
    required uint32 recover = 42;
    required uint32 attack_speed = 43;
    required uint32 frozen_addition_ratio = 44;
    required uint32 poisoning_addition_ratio = 45;
    required uint32 palsy_addition_ratio = 46;
    required uint32 dizziness_addition_ratio = 47;
    required uint32 frozen_resistance_ratio = 48;
    required uint32 poisoning_resistance_ratio = 49;
    required uint32 palsy_resistance_ratio = 50;
    required uint32 dizziness_resistance_ratio = 51;
    required uint32 output_hurt_promote_ratio = 52;
    required uint32 suffer_hurt_reduce_ratio = 53;
    required uint32 ignore_defense_ratio = 54;
    required uint32 rebound_hurt_ratio = 55;
    required uint32 exp_coefficient = 56;
    required uint32 move_speed = 57;
    required uint32 armor_id = 58;
    required uint32 weapon_id = 59;
    required uint32 mounts_id = 60;
    required uint32 backpack_size = 61;
    required uint32 warehouse_size = 62;
    required uint32 physical_power = 63;
    required uint32 fighting_power = 64;
    required uint32 anger = 65;
    required uint32 create_time = 66;
    required uint32 online_time = 67;
    required uint32 offline_time = 68;
    required uint32 update_time = 69;
	required  uint32 history_online = 70;
    required uint32 melting = 71;
    required uint32 potential_share_max = 72;
    required uint32 potential_accumulation = 73;
    required uint32 skill_point = 74;
    required uint32 popularity = 75;
    required uint32 skill_point_time = 76;
    required uint32 vip_level = 77;
    required uint32 team_id = 78;
    required uint32 camp_id = 79;
    required uint32 strategy = 80;
    required uint32 store_weapon = 81;
    required uint32 bow_id = 82;
	required uint32 bow_index = 83;
	required uint32 cavalry_index = 84;
	required uint32 bow_speed = 85;
	required uint32 equip_power = 86;
}
